--- a/profile.html
+++ b/profile.html
@@ -40,3 +40,32 @@
 </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Profile – SoundMuseAI</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>🎧 SoundMuseAI</h1>
+    <nav>
+      <a href="index.html">🏠 Home</a>
+      <a href="profile.html" class="active">👤 Profile</a>
+      <!-- Add other navigation links here -->
+    </nav>
+  </header>
+  <main class="profile-container">
+    <section class="profile-card">
+      <img src="demo-profile-bird.jpg" alt="User Profile Picture" class="profile-image">
+      <div class="profile-info">
+        <h2>My User Name Here</h2>
+        <p>🎶 Independent Artist</p>
+        <p>📍 Based in a world of frequency & feathers</p>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
