--- a/more.html
+++ b/more.html
@@ -1,91 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Option 8 – More | SoundMuseAI</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SoundMuseAI – More</title>
   <style>
-    .more-container {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: #f7faff;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+      padding: 20px;
     }
-
-    .more-container h1 {
-      font-size: 1.8rem;
-      color: #3b4d53;
-      margin-bottom: 1rem;
+    h1, h2 {
+      color: #5a4d7c;
     }
-
-    .more-section {
-      margin-bottom: 2rem;
+    .section {
+      margin-bottom: 40px;
     }
-
-    .more-section h2 {
-      font-size: 1.4rem;
-      color: #4a6b6b;
-      margin-bottom: 0.5rem;
+    .button {
+      display: inline-block;
+      background-color: #5a4d7c;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 10px;
     }
-
-    .more-section p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #555;
-    }
-
-    .coming-soon {
-      font-style: italic;
-      color: #888;
+    .button:hover {
+      background-color: #7e6eb0;
     }
   </style>
 </head>
 <body>
-  <div class="more-container">
-    <h1>🔍 Option 8 – More</h1>
+  <h1>More Options</h1>
 
-    <div class="more-section">
-      <h2>🎶 About SoundMuseAI</h2>
-      <p>
-        SoundMuseAI is a creativity companion designed to support musicians, composers,
-        lyricists, and experimental minds in crafting meaningful, unique music. Whether you're
-        digital-first or play traditional instruments, SoundMuse listens, adapts, and grows with you.
-      </p>
-    </div>
+  <section class="section" id="account-management">
+    <h2>My Account</h2>
+    <p>Manage your SoundMuseAI account settings, view your plan status, and upgrade if needed.</p>
+    <ul>
+      <li><strong>Plan:</strong> Free Tier</li>
+      <li><strong>Usage:</strong> 1 full-length or 2 short uploads per day</li>
+      <li><strong>Upgrade Options:</strong> Lite / Moderate / Heavy usage tiers (Coming Soon)</li>
+    </ul>
+    <a href="#" class="button">Upgrade Plan</a>
+  </section>
 
-    <div class="more-section">
-      <h2>🧠 Created By</h2>
-      <p>
-        Crystal Aowlan – Independent artist, volcanic lyricist, quantum curveball-thrower & AI collaborator.<br>
-        Special thanks to ChatGPT for back-end co-thinking, UI mockups, and *infinite patience* during testing. 😏
-      </p>
-    </div>
+  <section class="section" id="help">
+    <h2>Help</h2>
+    <p>Need guidance? Get support on using SoundMuseAI, uploading files, interpreting spectrographs, or writing with AI assistance.</p>
+    <a href="#" class="button">Get Help</a>
+  </section>
 
-    <div class="more-section">
-      <h2>📜 Music Score Viewer</h2>
-      <p class="coming-soon">
-        A visual music notation page for instrumentalists and AI tools like AIVA. You’ll soon be able to view 
-        downloadable scores for choruses, outros, and more. *(Coming Soon)*
-      </p>
-    </div>
+  <section class="section" id="about-section">
+    <h2>About SoundMuseAI</h2>
+    <p>
+      SoundMuseAI was created by <strong>Crystal Aowlan</strong>, a UK-based independent artist, music explorer, and creative polymath.  
+      It was designed as a creative companion — a tool that adapts to your needs and skill level, rather than dictating them.  
+      Whether you're a seasoned musician or just beginning your journey, SoundMuseAI offers a safe, encouraging space for all users,  
+      including those who are neurodivergent, disabled, or creatively blocked.  
+    </p>
+    <p>
+      This project began as a vision for something better:  
+      a musical co-creator that listens, responds, evolves, and supports — without judgement, jargon, or noise.  
+      SoundMuseAI aims to empower, inspire, and help users find their voice, one sound at a time.
+    </p>
+  </section>
 
-    <div class="more-section">
-      <h2>⚙️ Settings (Future)</h2>
-      <p class="coming-soon">
-        Preferences for light/dark mode, audio feedback, frequency tuning, and theme colour? Stay tuned...
-      </p>
-    </div>
-
-    <div class="more-section">
-      <h2>💡 Got Feedback?</h2>
-      <p>
-        This is a demo – but if you’ve got ideas, bugs, or epiphanies, Crystal would love to hear them.
-        (Form placeholder – can be added in the real version.)
-      </p>
-    </div>
-  </div>
 </body>
 </html>
